# okta_crud

./: README.md  pyproject.toml
okta_crud/: __main__.py  okta.py  utils.py
