[tool.poetry]
name = "okta-crud"
version = "0.1.0"
description = ""
authors = ["Daniel Bajorek <danielbajorek@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
okta = "^2.9.3"
asyncio = "^3.4.3"
click = "^8.1.7"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
